test/end-to-end/compile-errors/variant-method-impl-visibility.crow
main void()
	info log x.foo

v variant
	foo string()
x record v variant-member
-foo string(_ x)
	"x"
